--- a/draft.html
+++ b/draft.html
@@ -686,8 +686,8 @@
     <div class="navbar__overlay"></div>
 
     <div class="main">
-      <!-- -*-*-*-*-*-*-*-*--*-*-*- Card Section - Person --*-*-*-*-*-*-*-*-*-*-* -->
-      <section class="card-container" id="personCard">
+      <!-- -*-*-*-*-*-*-*-*--*-*-*- Card Section --*-*-*-*-*-*-*-*-*-*-* -->
+      <section class="card-container">
         <div class="card">
           <div class="top-container">
             <div class="card__navigate"></div>
@@ -788,10 +788,7 @@
 
           <div class="card__boxes">
             <!-- לקוח -->
-            <div
-              class="card__boxes--box box-reduced temp-class"
-              data-target="box1"
-            >
+            <div class="card__boxes--box">
               <div class="card__boxes--box__header">
                 <div class="card__boxes--box__header--title">
                   <span class="material-symbols-outlined"> event </span>
@@ -1006,241 +1003,9 @@
                   </div>
                 </div>
               </div>
-              <div class="card__boxes--box__content filters active">
-                <div class="filters-header">
-                  <div class="title">סינון תוצאות</div>
-
-                  <div class="icon-container">
-                    <span class="btn-primary">הפעל</span>
-
-                    <span
-                      class="material-symbols-outlined btn-default"
-                      id="close-filters"
-                    >
-                      close
-                    </span>
-                  </div>
-                </div>
-                <div class="line"></div>
-
-                <div class="filters__line">
-                  <div class="check-box">
-                    <span class="material-symbols-outlined">
-                      check_box_outline_blank
-                    </span>
-                    <div class="filters-number">
-                      <span>1</span>
-                      <span
-                        class="material-symbols-outlined small-icon btn-default"
-                      >
-                        more_vert
-                      </span>
-                    </div>
-                  </div>
-                  <div class="fields">
-                    <span class="edit-content transparent">
-                      <span class="label">
-                        <span>תגית</span>
-                      </span>
-                      <span class="edit-field">
-                        <span class="value-text"></span>
-                        <span class="material-symbols-outlined">
-                          expand_more
-                        </span>
-                      </span>
-                    </span>
-                    <span class="edit-content transparent">
-                      <span class="label">
-                        <span>שווה</span>
-                      </span>
-                      <span class="edit-field">
-                        <span class="value-text"></span>
-                        <span class="material-symbols-outlined">
-                          expand_more
-                        </span>
-                      </span>
-                    </span>
-                    <span class="edit-content transparent">
-                      <span class="label">
-                        <span>חשוב</span>
-                      </span>
-                      <span class="edit-field">
-                        <span class="value-text"></span>
-                        <span class="material-symbols-outlined">
-                          expand_more
-                        </span>
-                      </span>
-                    </span>
-                  </div>
-                  <div class="add-delete-btns-container">
-                    <span class="material-symbols-outlined"> add </span>
-                    <span class="material-symbols-outlined"> remove </span>
-                  </div>
-                </div>
-                <div class="line"></div>
-                <div class="filters__line">
-                  <div class="check-box">
-                    <span class="material-symbols-outlined">
-                      check_box_outline_blank
-                    </span>
-                    <div class="filters-number">
-                      <span>1</span>
-                      <span
-                        class="material-symbols-outlined small-icon btn-default"
-                      >
-                        more_vert
-                      </span>
-                    </div>
-                  </div>
-                  <div class="fields">
-                    <span class="edit-content transparent">
-                      <span class="label">
-                        <span>סטטוס</span>
-                      </span>
-                      <span class="edit-field">
-                        <span class="value-text"></span>
-                        <span class="material-symbols-outlined">
-                          expand_more
-                        </span>
-                      </span>
-                    </span>
-                    <span class="edit-content transparent">
-                      <span class="label">
-                        <span>לא שווה</span>
-                      </span>
-                      <span class="edit-field">
-                        <span class="value-text"></span>
-                        <span class="material-symbols-outlined">
-                          expand_more
-                        </span>
-                      </span>
-                    </span>
-                    <span class="edit-content transparent">
-                      <span class="label">
-                        <span>ליד</span>
-                      </span>
-                      <span class="edit-field">
-                        <span class="value-text"></span>
-                        <span class="material-symbols-outlined">
-                          expand_more
-                        </span>
-                      </span>
-                    </span>
-                  </div>
-                  <div class="add-delete-btns-container">
-                    <span class="material-symbols-outlined"> add </span>
-                    <span class="material-symbols-outlined"> remove </span>
-                  </div>
-                </div>
-                <div class="line"></div>
-
-                <div class="filters__line">
-                  <div class="check-box"></div>
-                  <div class="fields">
-                    <span class="edit-content disabled">
-                      <span class="label">
-                        <span>בחר שדה...</span>
-                      </span>
-                      <span class="edit-field">
-                        <span class="value-text"></span>
-                        <span class="material-symbols-outlined">
-                          expand_more
-                        </span>
-                      </span>
-                    </span>
-                    <span class="edit-content disabled">
-                      <span class="label">
-                        <span>שווה</span>
-                      </span>
-                      <span class="edit-field">
-                        <span class="value-text"></span>
-                        <span class="material-symbols-outlined">
-                          expand_more
-                        </span>
-                      </span>
-                    </span>
-                    <span class="edit-content disabled">
-                      <span class="label">
-                        <span>בחר ערך...</span>
-                      </span>
-                      <span class="edit-field">
-                        <span class="value-text"></span>
-                        <span class="material-symbols-outlined">
-                          expand_more
-                        </span>
-                      </span>
-                    </span>
-                  </div>
-                  <div class="add-delete-btns-container">
-                    <span class="material-symbols-outlined"> add </span>
-                    <span class="material-symbols-outlined"> remove </span>
-                  </div>
-                </div>
-                <div class="line"></div>
-
-                <div class="filters__line">
-                  <div class="check-box">
-                    <span>מיון</span>
-                  </div>
-                  <div class="fields">
-                    <span class="edit-content">
-                      <span class="label">
-                        <span>יורד</span>
-                      </span>
-                      <span class="edit-field">
-                        <span class="value-text"></span>
-                        <span class="material-symbols-outlined">
-                          expand_more
-                        </span>
-                      </span>
-                    </span>
-                  </div>
-                </div>
-                <div class="line"></div>
-
-                <div class="filters__line">
-                  <div class="check-box">
-                    <div class="check-box">
-                      <span
-                        class="material-symbols-outlined"
-                        style="opacity: 0"
-                      >
-                        check_box_outline_blank
-                      </span>
-                      <div class="filters-number">
-                        <span>1</span>
-                        <span
-                          class="material-symbols-outlined small-icon btn-default"
-                        >
-                          more_vert
-                        </span>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="fields">
-                    <span class="edit-content">
-                      <span class="label">
-                        <span>סטטוס</span>
-                      </span>
-                      <span class="edit-field">
-                        <span class="value-text"></span>
-                        <span class="material-symbols-outlined">
-                          expand_more
-                        </span>
-                      </span>
-                    </span>
-                  </div>
-                </div>
-              </div>
-              <div
-                class="card__boxes--box__content zero-extend"
-                id="zero-extend-communications"
-              >
+              <div class="card__boxes--box__content zero-extend">
                 <div class="card__boxes--box__content--fields">
                   <span class="edit-content small">
-                    <!-- <span class="label">
-                          <span>מעסיק</span>
-                        </span> -->
                     <span class="edit-field">
                       <span>הקלד...</span>
                       <span class="material-symbols-outlined">
@@ -1253,70 +1018,9 @@
                   expand_content
                 </span>
               </div>
-              <div
-                class="card__boxes--box__content active first-extend"
-                id="first-extend-communications"
-              >
-                <div class="card__boxes--box__content--table">
-                  <div class="table-flex-container">
-                    <div class="table-flex">
-                      <div class="table-header">
-                        <div class="table-cell sticky-cell sticky-header">
-                          שם
-                        </div>
-                        <div class="table-cell">
-                          <span>תפקיד בקשר</span>
-                        </div>
-                        <div class="table-cell big-cell">תקשורת</div>
-                      </div>
-                      <div class="table-row">
-                        <div class="table-cell sticky-cell sticky-row">
-                          Figma
-                        </div>
-                        <div class="table-cell">מעסיק חיצוני, בעלים</div>
-                        <div class="table-cell big-cell">
-                          <span>04-84900301, ראשי</span>
-                          <span class="material-symbols-outlined stop-icon">
-                            stop
-                          </span>
-                          <span>04-8490032, פקס</span>
-                          <span class="material-symbols-outlined stop-icon">
-                            stop
-                          </span>
-                          <span>055-5555555, סיווג</span>
-                        </div>
-                      </div>
-                      <div class="table-row">
-                        <div class="table-cell sticky-cell sticky-row">
-                          אביבה
-                        </div>
-                        <div class="table-cell">עובד</div>
-                        <div class="table-cell big-cell"></div>
-                      </div>
-                      <div class="table-row">
-                        <div class="table-cell sticky-cell sticky-row">
-                          יצחק נהון
-                        </div>
-                        <div class="table-cell">עובד, מזכיר</div>
-                        <div class="table-cell big-cell">
-                          <span>04-84900301, ראשי</span>
-                          <span class="material-symbols-outlined stop-icon">
-                            stop
-                          </span>
-                          <span>04-8490032, פקס</span>
-                          <span class="material-symbols-outlined stop-icon">
-                            stop
-                          </span>
-                          <span>055-5555555, סיווג</span>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
             </div>
             <!-- איש מכירות -->
-            <div class="card__boxes--box box-reduced" data-target="box2">
+            <div class="card__boxes--box">
               <div class="card__boxes--box__header">
                 <div class="card__boxes--box__header--title">
                   <span class="material-symbols-outlined"> event </span>
@@ -1397,59 +1101,14 @@
                   </span>
                 </div>
               </div>
-              <div class="card__boxes--box__content active first-extend">
-                <div class="card__boxes--box__content--table">
-                  <div class="table-flex-container">
-                    <div class="table-flex">
-                      <div class="table-header">
-                        <div class="table-cell sticky-cell sticky-header">
-                          <span class="material-symbols-outlined"
-                            >category</span
-                          >
-                        </div>
-                        <div class="table-cell medium-cell">קטגוריה</div>
-                        <div class="table-cell big-cell">פרטים</div>
-                        <div class="table-cell small-cell">סיווג</div>
-                      </div>
-                      <div class="table-row">
-                        <div class="table-cell sticky-cell sticky-row">
-                          <span class="material-symbols-outlined">phone</span>
-                        </div>
-                        <div class="table-cell medium-cell">מספר טלפון</div>
-                        <div class="table-cell big-cell">053-344242</div>
-                        <div class="table-cell small-cell">עבודה</div>
-                      </div>
-                      <div class="table-row">
-                        <div class="table-cell sticky-cell sticky-row">
-                          <span class="material-symbols-outlined">phone</span>
-                        </div>
-                        <div class="table-cell medium-cell">מספר טלפון</div>
-                        <div class="table-cell big-cell">052-3232678</div>
-                        <div class="table-cell small-cell">עבודה</div>
-                      </div>
-                      <div class="table-row">
-                        <div class="table-cell sticky-cell sticky-row">
-                          <span class="material-symbols-outlined">mail</span>
-                        </div>
-                        <div class="table-cell medium-cell">דואר אלקטרוני</div>
-                        <div class="table-cell big-cell">impact@gmail.com</div>
-                        <div class="table-cell small-cell">פרטי</div>
-                      </div>
-                      <div class="table-row">
-                        <div class="table-cell sticky-cell sticky-row">
-                          <span class="material-symbols-outlined"
-                            >language</span
-                          >
-                        </div>
-                        <div class="table-cell medium-cell">אתר אינטרנט</div>
-                        <div class="table-cell big-cell">www.ynet.co.il</div>
-                        <div class="table-cell small-cell">עסקי</div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
             </div>
+          </div>
+
+          <div class="grid" id="grid">
+            <div class="grid-item" draggable="true">Item 1</div>
+            <div class="grid-item" draggable="true">Item 2</div>
+            <div class="grid-item" draggable="true">Item 3</div>
+            <div class="grid-item" draggable="true">Item 4</div>
           </div>
         </div>
       </section>
@@ -1458,7 +1117,7 @@
     <!-- *-*-*-*-*-*-*-*-*-*-*-*-*-*-* JavaScript Files *-*-*-*-*-*-*-*-*-*-*-*-*-*-* -->
     <script src="./up/js/dark-mode.js"></script>
     <script src="up/js/edit-address.js"></script>
-    <script src="/up/js/person.js"></script>
     <script src="/up/js/navbar.js"></script>
+    <script src="/up/js/draft.js"></script>
   </body>
 </html>
